--- a/index.html
+++ b/index.html
@@ -19,43 +19,43 @@
     <div class="snow"></div>
     <header class="snow-homebg">
         <div class="nav-sec">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container">
-                <a class="navbar-brand" href="#"><img src="image/logo.png" alt="no image"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#services">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#about">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#portfolio">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#team">Team</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#blog">Blog</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link" href="#contact">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Demo</a>
-                        </li>
-                    </ul>
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <div class="container">
+                    <a class="navbar-brand" href="#"><img src="image/logo.png" alt="no image"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#services">Services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#about">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#portfolio">Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#team">Team</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#blog">Blog</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link" href="#contact">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Demo</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
         </div>
         <div class="home-head">
             <h1>Happy <u>Holiday</u></h1>
@@ -163,59 +163,66 @@
 
     <section class="about-icon">
         <div class="snow-img">
-            <div class="container">
-                <div class="snow"></div>
-                <div class="row about-box">
+            <div class="container about-con">
+                <div class="row  about-box">
                     <div class="col-12 col-sm-6 col-md-3 p-2 card1">
-                        <div class="icon-box">
-                            <div class="idea">
-                                <iconify-icon icon="carbon:idea"></iconify-icon>
+                        <div class="box">
+                            <div class="icon-box">
+                                <div class="idea">
+                                    <iconify-icon icon="carbon:idea"></iconify-icon>
+                                </div>
+                                <h3>Idea</h3>
+                                <p>First Step</p>
                             </div>
-                            <h3>Idea</h3>
-                            <p>First Step</p>
-                        </div>
-                        <div class="about-hover">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                                sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                            <div class="about-hover">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                    sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3 p-2  card1 ">
-                        <div class="icon-box">
-                            <div class="design">
-                                <iconify-icon icon="heroicons:presentation-chart-line-solid"></iconify-icon>
+                        <div class="box">
+                            <div class="icon-box">
+                                <div class="design">
+                                    <iconify-icon icon="heroicons:presentation-chart-line-solid"></iconify-icon>
+                                </div>
+                                <h3>Design</h3>
+                                <p>Second Step</p>
                             </div>
-                            <h3>Design</h3>
-                            <p>Second Step</p>
-                        </div>
-                        <div class="about-hover">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                                sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                            <div class="about-hover">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                    sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3 p-2 card1 ">
-                        <div class="icon-box">
-                            <div class="develop">
-                                <iconify-icon icon="la:drafting-compass-solid"></iconify-icon>
+                        <div class="box">
+                            <div class="icon-box">
+                                <div class="develop">
+                                    <iconify-icon icon="la:drafting-compass-solid"></iconify-icon>
+                                </div>
+                                <h3>Develop</h3>
+                                <p>Third Step</p>
                             </div>
-                            <h3>Develop</h3>
-                            <p>Third Step</p>
-                        </div>
-                        <div class="about-hover">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                                sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                            <div class="about-hover">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                    sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3 p-2 card1 ">
-                        <div class="icon-box">
-                            <div class="result">
-                                <iconify-icon icon="heroicons:flag-20-solid"></iconify-icon>
+                        <div class="box">
+                            <div class="icon-box">
+                                <div class="result">
+                                    <iconify-icon icon="heroicons:flag-20-solid"></iconify-icon>
+                                </div>
+                                <h3>Result</h3>
+                                <p>Fourth Step</p>
                             </div>
-                            <h3>Result</h3>
-                            <p>Fourth Step</p>
-                        </div>
-                        <div class="about-hover">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                                sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                            <div class="about-hover">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                    sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
