--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
             </nav>
         </div>
         <div class="home-head">
-            <h1>Happy <u>Holiday</u></h1>
+            <h1>Happy
+                <span>
+                    <span class="underline">Holiday</span>
+                </span>
+            </h1>
 
         </div>
 
@@ -143,7 +147,7 @@
         <div class="container about-container">
             <div class="row about-row">
                 <div class="col">
-                    <h1 class="p-3 about-head">Bolo do <u>creative</u> works.</h1>
+                    <h1 class="p-3 about-head">Bolo do <span class="underline">creative</span> works.</h1>
                     <p class="about-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -363,7 +367,7 @@
                 <div class="col-lg-6 col-sm-12 col-md-6 port4-content p-0">
                     <div>
                         <h1 class="py-3 px-3">We Make Your Dream</h1>
-                        <p class="py-3 px-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        <p class="py-3 px-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
@@ -385,11 +389,13 @@
     <section class="team" id="team">
         <div class="container">
             <div class="row">
-                <h1 class="text-center fw-bolder p-5">Team Of <u>Awesome</u></h1>
+                <h1 class="text-center fw-bolder p-5">Team Of <span class="underline">Awesome</span></h1>
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="card-team">
                         <div class="img-team">
-                            <img src="image/team/t1.jpg" alt="">
+                            <div class="img-team">
+                                <img src="image/team/t1.jpg" alt="">
+                            </div>
                             <div class="team-content">
                                 <h4 class="fw-bolder p-1">Oscar Helman</h4>
                                 <p class="text-info">Founder & CEO</p>
@@ -414,7 +420,9 @@
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="card-team">
                         <div class="img-team">
-                            <img src="image/team/t2.jpg" alt="">
+                            <div class="img-team">
+                                <img src="image/team/t2.jpg" alt="">
+                            </div>
                             <div class="team-content">
                                 <h4 class="fw-bolder p-1">Isaac Nicholas</h4>
                                 <p class="text-info">Founder & CEO</p>
@@ -439,7 +447,9 @@
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="card-team">
                         <div class="img-team">
-                            <img src="image/team/t3.jpg" alt="">
+                            <div class="img-team">
+                                <img src="image/team/t3.jpg" alt="">
+                            </div>
                             <div class="team-content">
                                 <h4 class="fw-bolder p-1">Rose Shipp</h4>
                                 <p class="text-info">Founder & CEO</p>
@@ -464,7 +474,9 @@
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="card-team">
                         <div class="img-team">
-                            <img src="image/team/t4.jpg" alt="">
+                            <div class="img-team">
+                                <img src="image/team/t4.jpg" alt="">
+                            </div>
                             <div class="team-content">
                                 <h4 class="fw-bolder p-1">John Arnold</h4>
                                 <p class="text-info">Founder & CEO</p>
@@ -517,7 +529,8 @@
 
     <section class="blog" id="blog">
         <div class="container my-5">
-            <h1 class="fw-bolder text-center p-3">Latest <u>Posts</u></h1>
+            <h1 class="fw-bolder text-center p-3">Latest <span class="underline">Posts</sapn>
+            </h1>
             <div class="row">
                 <div class="owlrow carousel owl-carousel owl-theme ">
                     <div class="col">
@@ -636,43 +649,51 @@
     <section class="contact" id="contact">
         <div class="snow-contact">
             <div class="container">
-                <h1 class="text-center fw-bloder py-5">Contact <u>Bolo</u></h1>
+                <h1 class="text-center fw-bloder py-5">Contact <span class="underline">Bolo</span></h1>
                 <div class="row d-flex flex-column">
-                    <div class="col-12 col-sm-12 col-md-12 d-flex justify-content-center">
-                        <form action="#">
-                            <div class="form d-flex py-4">
-                                <div class="d-flex flex-column mb-3">
-                                    <div class="field-set p-3">
-                                        <input class="form-control" type="text" placeholder="Your Name" required>
+                    <div class="col">
+                        <form action="#" class="form">
+                            <div class="row">
+                                <div class="col-lg-6 col-md-12">
+                                    <div class="field-set">
+                                        <input type="text" name="name" id="name" class="form-control"
+                                            placeholder="Your Name">
                                     </div>
-                                    <div class="field-set p-3">
-                                        <input class="form-control" type="text" placeholder="Your Email" required>
+                                    <div class="field-set">
+                                        <input type="text" name="email" id="email" class="form-control"
+                                            placeholder="Your Email">
                                     </div>
-                                    <div class="field-set p-3">
-                                        <input class="form-control" type="text" placeholder="Your Phone" required>
+                                    <div class="field-set">
+                                        <input type="text" name="phone" id="phone" class="form-control"
+                                            placeholder="Your Phone">
                                     </div>
                                 </div>
-                                <div class="field-set ">
-                                    <textarea class="form-control" name="text" id="" cols="30" rows="8"
-                                        placeholder="Your Message"></textarea>
+                                <div class="col-lg-6 col-md-12">
+                                    <div class="field-set">
+                                        <textarea name="message" id="message" class="form-control"
+                                            placeholder="Your Message"></textarea>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="contact-btn text-center">
-                                <input type="submit" id="send_message" value="Submit Form"
-                                    class="btn btn-custom color-2">
+                                <div class="col-md-12 text-center">
+                                    <div>
+                                        <div id="submit">
+                                            <button>submit form</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </form>
                     </div>
-                    <div class="last row py-5">
-                        <div class="col-12 col-sm-12 col-md-4 contact-last text-center">
+                    <div class="row last py-5">
+                        <div class="col-lg-4 col-md-12 contact-last text-center">
                             <p class="fw-bolder">Call Us</p>
                             <p class="text-muted">(208) 333 9296</p>
                         </div>
-                        <div class="col-12 col-sm-12 col-md-4 contact-last text-center">
+                        <div class="col-lg-4 col-md-12 contact-last text-center">
                             <p class="fw-bolder">Address</p>
                             <p class="text-muted">Collins Street West, London, UK</p>
                         </div>
-                        <div class="col-12 col-sm-12 col-md-4 contact-last text-center">
+                        <div class="col-lg-4 col-md-12 contact-last text-center">
                             <p class="fw-bolder">Email Us</p>
                             <p class="text-muted">contact@bolostudio.com</p>
                         </div>
@@ -715,6 +736,14 @@
     <script src="main1.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
+    <script>
+        const navLinks = document.querySelectorAll(".nav-item");
+        const menuToggle = document.getElementById("navbarNav");
+        let bsCollabse = new bootstrap.Collapse(menuToggle, { toggle: false })
+        navLinks.forEach((e) => {
+            e.addEventListener("click", () => { bsCollabse.toggle() })
+        })
+    </script>
 </body>
 
 </html>
