--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="snow"></div>
     <header class="snow-homebg">
         <div class="nav-sec">
-            <nav class="navbar navbar-expand-lg navbar-dark">
+            <nav class="navbar navbar-expand-lg navbar-dark" style="z-index: 100 !important;">
                 <div class="container">
                     <a class="navbar-brand" href="#"><img src="image/logo.png" alt="no image"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -361,12 +361,12 @@
     <section>
         <div class="container-second">
             <div class="row">
-                <div class="col-lg-6 col-sm-12 col-md-6 port4-img p-0">
+                <div class="col-lg-6 col-sm-12 col-md-12 port4-img p-0">
                     <img src="image/port3.jpg" alt="no image">
                 </div>
-                <div class="col-lg-6 col-sm-12 col-md-6 port4-content p-0">
+                <div class="col-lg-6 col-sm-12 col-md-12 port4-content m-0 p-0">
                     <div>
-                        <h1 class="py-3 px-3">We Make Your Dream</h1>
+                        <h1 class="py-3 px-5">We Make Your Dream</h1>
                         <p class="py-3 px-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -374,7 +374,7 @@
                             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                             deserunt mollit anim id est laborum..</p>
                     </div>
-                    <div class="btn py-5 px-5">
+                    <div class="btn py-3 px-5">
                         <a href="#" class="fw-bolder">CONTACT US</a>
                     </div>
 
